# factbook-scraper

./: .flake8  pyproject.toml
fbscraper/: archive_scrapers.py  country_scraper.py  field_maps.py  field_scrapers.py  localscraper.py  scraper.py  scrapers.py  utils.py  web_scrapers.py  webscraper.py
fbscraper/services/: scrape_offline_archive.py  scrape_web_archive.py
tests/: test_utils.py
